@@ -1,5 +1,10 @@
 2007-10-17  Alexander Larsson  <alexl@redhat.com>
 
+        * src/file-manager/fm-properties-window.c:
+	Replace some gnome-vfs code with gio code
+
+2007-10-17  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-private.h:
         * libnautilus-private/nautilus-file.[ch]:
         Add can_delete and can_trash
